Asociaciones terminadas y test pasado(Menos de asociaciones)
